janet and shawn asked language string update

--- a/lang/en.json
+++ b/lang/en.json
@@ -547,8 +547,8 @@
             "Episode sort by": "Episode sort by",
             "YouTube playlist or YouTube channel order": "YouTube playlist or YouTube channel order",
             "YouTube playlist or YouTube channel reverse order": "YouTube playlist or YouTube channel reverse order",
-            "Add to program store": "Add to program store",
-            "You can find the programs which has been added to program store of \"Main Channels\" and \"Category\" at My App.": "You can find the programs which has been added to program store of \"Main Channels\" and \"Category\" at My App."
+            "Add to My App": "Add to My App",
+            "You can search the programs which has been added to \"Main Channels\" and \"Program store\" of My App.": "You can search the programs which has been added to \"Main Channels\" and \"Program store\" of My App."
         }
     },
     "channel-poi": {
