--- a/lang/zh.json
+++ b/lang/zh.json
@@ -484,7 +484,8 @@
             "Filtered by:": "分類條件:",
             "All": "全部",
             "FLIPr programs": "FLIPr節目",
-            "Youtube sync programs": "Youtube同步節目"
+            "Youtube sync programs": "Youtube同步節目",
+            "Live programs": "直播節目"
         },
         "channel-list": {
             "Get URL": "網址",
@@ -509,8 +510,10 @@
             "Sync": "立即同步",
             "You don't have any FLIPr programs yet.": "你尚無任何FLIPr節目",
             "You don't have any YouTube sync programs yet.": "你尚無任何YouTube同步節目",
+            "You don't have any live programs yet.": "你尚無任何直播節目",
             "Invalid original YouTube playlist": "已失效的YouTube播放清單",
             "YouTube sync program": "YouTube 同步節目",
+            "Live program": "直播節目",
             "Sort by YouTube order": "依 YouTube 順序排列",
             "Sort by YouTube reverse order": "依 YouTube 反序排列",
             "On program store": "已添加到節目商店"
@@ -520,6 +523,7 @@
             "Choose a type": "選一個類型",
             "YouTube Sync<br />Program": "YouTube同步節目",
             "FLIPr<br />Program": "FLIPr節目",
+            "Live<br />Program": "直播節目",
             "Terms of use": "使用條款",
             "Agree": "同意",
             "Disagree": "不同意",
@@ -580,6 +584,7 @@
             "My Programs": "我的節目",
             "Create a new FLIPr Program": "創建 FLIPr 節目",
             "Create a new YouTube Sync Program": "創建 YouTube 同步節目",
+            "Create a new Live Program": "創建直播節目",
             "Settings": "節目設定",
             "Required field": "必填項目"
         },
@@ -620,6 +625,7 @@
             "Create": "完成",
             "Save": "儲存",
             "Add Youtube channel or playlist URL": "輸入Youtube頻道或播放清單",
+            "Add live video URL": "輸入直播網址",
             "Auto sync with YouTube": "YouTube自動同步",
             "Program will auto-sync with YouTube at 0 AM, 8 AM, 12 PM, 6 PM and 9 PM every day. Manually do so by clicking \"Sync\" in program list.": "系統會在每天早上0點、8點、中午12點、晚上6點、9點，與YouTube自動進行同步，或可在節目列表點擊「同步」按鈕進行同步。",
             "This program will automatically synchronize information and videos from YouTube at 0 AM, 8 AM, 12 PM, 6 PM and 9 PM every day. Are you sure to auto sync?": "YouTube 同步功能開啟後，系統會在每天早上0點、8點、中午12點、晚上6點、9點，自動同步YouTube的資訊與影片，確定要進行同步?",
