--- a/lang/en.json
+++ b/lang/en.json
@@ -438,7 +438,7 @@
             "YouTube sync program": "YouTube sync program",
             "Sort by YouTube order": "Sort by YouTube order",
             "Sort by YouTube reverse order": "Sort by YouTube reverse order",
-            "On my app": "On my app"
+            "In my app": "In my app"
         },
         "overlay": {
             "Create a New Program": "Create a New Program",
