--- a/lang/zh.json
+++ b/lang/zh.json
@@ -516,7 +516,7 @@
             "Live program": "直播節目",
             "Sort by YouTube order": "依 YouTube 順序排列",
             "Sort by YouTube reverse order": "依 YouTube 反序排列",
-            "On my app": "已上架"
+            "In my app": "已上架"
         },
         "overlay": {
             "Create a New Program": "建立一個新的節目",
@@ -627,7 +627,7 @@
             "Add Youtube channel or playlist URL": "輸入Youtube頻道或播放清單",
             "Add live video URL": "輸入直播網址",
             "Auto sync with YouTube": "YouTube自動同步",
-            "Program will auto-sync with YouTube at 0 AM, 8 AM, 12 PM, 2 PM, 6 PM and 9 PM every day. Manually do so by clicking 系統會在每天早上0點、8點、中午12點、下午2點、晚上6點、9點，與YouTube自動進行同步，或可在節目列表點擊「同步」按鈕進行同步\"Sync\" in program list.": "系統會在每天早上0點、8點、中午12點、晚上6點、9點，與YouTube自動進行同步，或可在節目列表點擊「同步」按鈕進行同步。",
+            "Program will auto-sync with YouTube at 0 AM, 8 AM, 12 PM, 2 PM, 6 PM and 9 PM every day. Manually do so by clicking \"Sync\" in program list.": "系統會在每天早上0點、8點、中午12點、晚上6點、9點，與YouTube自動進行同步，或可在節目列表點擊「同步」按鈕進行同步。",
             "This program will automatically synchronize information and videos from YouTube at 0 AM, 8 AM, 12 PM, 2 PM, 6 PM and 9 PM every day. Are you sure to auto sync?": "YouTube 同步功能開啟後，系統會在每天早上0點、8點、中午12點、下午2點、晚上6點、9點，自動同步YouTube的資訊與影片，確定要進行同步?",
             "Episode sort by": "劇集排序依照",
             "YouTube playlist or YouTube channel order": "YouTube 播放清單或頻道順序排列",
