--- a/lang/zh.json
+++ b/lang/zh.json
@@ -207,18 +207,18 @@
             "Run app": "開啟App",
             "Playback for a program or episode": "播放特定節目或劇集",
             "Input FLIPr program or episode URL...": "輸入FLIPr節目或劇集連結...",
-            "Cancel": "取消",
-            "Send": "發送",
             "Please fill in all required fields.": "請輸入必填項目",
             "Invalid URL, please try again.": "失效的連結，請重新輸入。",
             "Unsaved changes will be lost, are you sure want to leave?": "未儲存資料將遺失，確定離開？",
             "No": "否",
             "Yes": "是",
             "Cancel": "取消",
-            "Send": "發送",
             "Notification history list (20 notifications displayed at the most.)": "已發送通知列表(顯示最近20筆):",
             "Input notification message...": "輸入通知內容...",
             "Input FLIPr program or episode URL...": "輸入 FLIPr 節目或劇集網址..."
+        },
+        "schedule-form":{
+            "Schedule": "發送時間"
         }
     },
     "brand-setting": {
