--- a/lang/zh.json
+++ b/lang/zh.json
@@ -557,6 +557,7 @@
         "setting-form": {
             "If you signed in with Facebook, you can't change your name and password.": "Facebook登入用戶不可更改用戶名稱與密碼",
             "Email": "信箱",
+            "Language": "語言",
             "Username": "用戶名稱",
             "Username in FLIPr which is composed of 6-16 English letters, numbers or low line.": "用戶名稱請輸入6-16個字元，只能使用中英文、數字和底線。",
             "Password": "密碼",
