--- a/lang/zh.v4.json
+++ b/lang/zh.v4.json
@@ -22,6 +22,7 @@
     "overlay": {
         "loading": {
             "Saving...": "儲存中...",
+            "System Message": "系統訊息",
             "Processing...": "處理中..."
         },
         "system-error": {
