1. images upload use modal 2. on change add "has-change" to body and the item

--- a/lang/zh.v4.json
+++ b/lang/zh.v4.json
@@ -23,6 +23,7 @@
         "loading": {
             "Saving...": "儲存中...",
             "System Message": "系統訊息",
+            "Image Upload": "圖片上傳",
             "Processing...": "處理中..."
         },
         "system-error": {
