14. 若必填項目沒有填滿，按下 "Save"，則出現紅色警示"Please fill in all required fields." 15. 按下"Save& visit the page"以後會彈出錯誤視窗 "System Message"。（見附圖） 16. 左邊選單列"Brand Settings" 要改成 "Brand Management"

--- a/lang/zh.v4.json
+++ b/lang/zh.v4.json
@@ -196,6 +196,7 @@
             "where is 'Suggested programs'": "'節目推薦'在那裡",
             "Upload program logo": "上傳節目 logo",
             "Click icon button to upload your personal SNS icon! Better results with 50x50 image.": "點擊上傳客製化 SNS 的icon! 最佳解析度 50x50 。",
+            "Please fill in all required fields.": "請輸入必填項目。",
 
 
             "+Add social network services": "+ 加入社群連結",
