4. Detailed description, Short description, Call to action and Suggested programs 是必填項目，請在前面加上 " * "。
5 * Detailed description：內要有預設文字「Latest and popular videos all in FLIPr app!」
中文翻譯：精采熱門影片每天更新，一切都在FLIPr app！

6. * Short description：預設文字「Latest and popular videos, updating EVERY DAY!」
中文翻譯：最新、最熱門的線上影片，你不可錯過的每日精采！

7. * Call to action：預設文字「FREE to download now!」
中文翻譯：立刻下載FLIPr app！

--- a/lang/zh.v4.json
+++ b/lang/zh.v4.json
@@ -197,6 +197,9 @@
             "Upload program logo": "上傳節目 logo",
             "Click icon button to upload your personal SNS icon! Better results with 50x50 image.": "點擊上傳客製化 SNS 的icon! 最佳解析度 50x50 。",
             "Please fill in all required fields.": "請輸入必填項目。",
+            "Latest and popular videos all in FLIPr app!": "精采熱門影片每天更新，一切都在FLIPr app！",
+            "Latest and popular videos, updating EVERY DAY!": "最新、最熱門的線上影片，你不可錯過的每日精采！",
+            "FREE to download now!": "立刻下載FLIPr app！",
 
 
             "+Add social network services": "+ 加入社群連結",
