11. Suggested programs：要列出四個必填 suggested programs 13. Suggested programs：若貼上的link format錯誤，則出現紅色警示視窗"Please use your branding URL, ex. brand.flipr.tv/view/p1234"

--- a/lang/zh.v4.json
+++ b/lang/zh.v4.json
@@ -200,6 +200,7 @@
             "Latest and popular videos all in FLIPr app!": "精采熱門影片每天更新，一切都在FLIPr app！",
             "Latest and popular videos, updating EVERY DAY!": "最新、最熱門的線上影片，你不可錯過的每日精采！",
             "FREE to download now!": "立刻下載FLIPr app！",
+            "Please use your branding URL": "請輸入你的品牌網址",
 
 
             "+Add social network services": "+ 加入社群連結",
