language string update

--- a/lang/zh.v4.json
+++ b/lang/zh.v4.json
@@ -175,27 +175,27 @@
             "My App": "App 管理",
             "Brand Management": "品牌設定",
             "Input SNS link...": "請輸入 SNS 網址...",
-            "Please upload SNS icon.": "請上傳 SNS 小圖",
-            "Introduce your app": "app 介紹",
-            "Promote your app": "社群推廣",
+            "Please upload SNS icon.": "請上傳連結圖示",
+            "Introduce your app": "介紹你的App!",
+            "Promote your app": "推廣你的App!",
             "Suggested programs": "節目推薦",
             "App Name": "APP 名稱",
             "App Logo": "APP 商標",
             "Detailed description": "App介紹",
             "Short descript": "簡短介紹",
-            "call to action": "標語",
-            "SNS": "社群網址",
+            "call to action": "下載標語",
+            "SNS": "社群連結",
             "Input program link...": "輸入節目網址...",
             "Input program name...": "輸入節目名稱...",
-            "Save & Visit the page": "儲存 & 開啟頁面",
+            "Save & Visit the page": "儲存 & 瀏覽結果",
             "Best within 80 characters": "最佳字數80",
             "Best within 40 characters": "最佳字數40",
             "Best within 15 characters": "最佳字數15",
             "where is 'Introduce your app'": "'app 介紹'在那裡",
             "where is 'Promote your app'": "'社群推廣'在那裡",
             "where is 'Suggested programs'": "'節目推薦'在那裡",
-            "Upload program logo": "上傳節目 logo",
-            "Click icon button to upload your personal SNS icon! Better results with 50x50 image.": "點擊上傳客製化 SNS 的icon! 最佳解析度 50x50 。",
+            "Upload program logo": "上傳節目商標",
+            "Upload your personal SNS icon now! Better results with 50x50 image.": "立刻上傳個人化的社群圖示! 最佳建議解析度 50x50 。",
             "Please fill in all required fields.": "請輸入必填項目。",
             "Latest and popular videos all in FLIPr app!": "精采熱門影片每天更新，一切都在FLIPr app！",
             "Latest and popular videos, updating EVERY DAY!": "最新、最熱門的線上影片，你不可錯過的每日精采！",
