update language string

--- a/lang/zh.v4.json
+++ b/lang/zh.v4.json
@@ -201,9 +201,11 @@
             "Latest and popular videos, updating EVERY DAY!": "最新、最熱門的線上影片，你不可錯過的每日精采！",
             "FREE to download now!": "立刻下載FLIPr app！",
             "Please use your branding URL": "請輸入你的品牌網址",
-
-
             "+Add social network services": "+ 加入社群連結",
+            "+Add suggested program": "+ 加入節目推薦",
+
+
+
             "Please fill in your brand name.": "請輸入品牌名稱",
             "Better results with 260x200 or higher resolution image.": "圖檔最佳解析為 260x200, 檔案大小不超過500KB",
             "Please upload png file.": "請上傳 PNG 格式圖檔",
