update language string

--- a/lang/zh.v4.json
+++ b/lang/zh.v4.json
@@ -174,7 +174,7 @@
         "main-area": {
             "My App": "App 管理",
             "Brand Management": "品牌設定",
-            "Input SNS link...": "請輸入 SNS 網址...",
+            "Input SNS link...": "請輸入社群連結...",
             "Please upload SNS icon.": "請上傳連結圖示",
             "Introduce your app": "介紹你的App!",
             "Promote your app": "推廣你的App!",
