--- a/lang/zh.json
+++ b/lang/zh.json
@@ -451,12 +451,12 @@
             "Program List": "節目列表 ",
             "Programs": "節目",
 
-            "Upload channel banner images to make the channel more unique.": "上傳 Banner 圖片",
-            "iOS image Upload Now!": "立刻上傳iOS圖片",
-            "Andriod image Upload Now!": "立刻上傳Andriod圖片",
-            "The photo you uploaded is too small! It must be at least 1536 pixels wide and 570 pixels tall.": "您所上傳的照片太小了！它必須至少為1536像素寬和570像素高。",
+            "Upload channel banner images to make the channel more unique.": "透過上傳頻道圖片，使您的頻道更為獨特！",
+            "iOS image Upload Now!": "立刻上傳 iOS 圖片!",
+            "Andriod image Upload Now!": "立刻上傳 Andriod 圖片!",
+            "The photo you uploaded is too small! It must be at least 1536 pixels wide and 570 pixels tall.": "上傳的圖片太小了！相片寬度至少必須是1536像素，高度則至少是570像素。",
             "Recommended large channel art size": "建議圖片尺寸",
-            "The photo you uploaded is too small! It must be at least 800 pixels wide and 244 pixels tall.": "您所上傳的照片太小了！它必須至少為800像素寬和240像素高。",
+            "The photo you uploaded is too small! It must be at least 800 pixels wide and 244 pixels tall.": "上傳的圖片太小了！相片寬度至少必須是800像素，高度則至少是244像素。",
 
             "Add Channel": "增加頻道",
             "Add programs": "新增節目",
