--- a/lang/zh.json
+++ b/lang/zh.json
@@ -735,7 +735,8 @@
         "content-area": {
             "The uploaded video will be import to an episode automatically.": "上傳的影片將會自動匯入一個劌集。",
             "&gt; Create new episode &gt; Upload a video": "&gt; 策展新劇集 &gt; 上傳影片",
-            "Choose videos to upload": "選擇上傳影片"
+            "Choose videos to upload": "選擇上傳影片",
+            "Done": "完成"
         }
     },
     "episode-list": {
