language string and icons

--- a/lang/zh.json
+++ b/lang/zh.json
@@ -617,12 +617,21 @@
         "title-func": {
             "My Programs": "節目管理",
             "Create a new FLIPr Program": "創建 FLIPr 節目",
-            "Create a new YouTube Sync Program": "創建 YouTube 同步節目",
+            "Create a new Sync Program": "創建同步節目",
             "Create a new Live Program": "創建直播節目",
             "Settings": "節目設定",
             "Required field": "必填項目"
         },
         "setting-form": {
+        	"Please input YouTube or Vimeo URL.": "請輸入 YouTube 或 Vimeo 連結。",
+        	"URL sample": "範例連結",
+            "Add channel or playlist URL": "輸入頻道或播放清單連結",
+            "Playlist or channel order": "播放清單或頻道順序排列",
+            "Playlist or channel reverse order": "播放清單或頻道反序排列",
+            "Auto sync with video source": "影片自動同步",
+            "Program will auto-sync with video source at 0 AM, 8 AM, 12 PM, 2 PM, 6 PM and 9 PM every day. Manually do so by clicking \"Sync\" in program list.": "系統會在每天早上0點、8點、中午12點、下午2點、晚上6點、9點，與影片來源自動進行同步，或可在節目列表點擊「同步」按鈕進行同步。",
+            "This program will automatically synchronize videos from video source at 0 AM, 8 AM, 12 PM, 2 PM, 6 PM and 9 PM every day. Are you sure to auto sync?": "影片同步功能開啟後，系統會在每天早上0點、8點、中午12點、下午2點、晚上6點、9點，自動同步影片，確定要進行同步?",
+        	
             "Title": "名稱",
             "Best within 10 characters": "建議10字以內",
             "Program logo": "節目商標",
@@ -658,14 +667,8 @@
             "Cancel": "取消",
             "Create": "完成",
             "Save": "儲存",
-            "Add Youtube channel or playlist URL": "輸入Youtube頻道或播放清單",
             "Add live video URL": "輸入直播網址",
-            "Auto sync with YouTube": "YouTube自動同步",
-            "Program will auto-sync with YouTube at 0 AM, 8 AM, 12 PM, 2 PM, 6 PM and 9 PM every day. Manually do so by clicking \"Sync\" in program list.": "系統會在每天早上0點、8點、中午12點、晚上6點、9點，與YouTube自動進行同步，或可在節目列表點擊「同步」按鈕進行同步。",
-            "This program will automatically synchronize information and videos from YouTube at 0 AM, 8 AM, 12 PM, 2 PM, 6 PM and 9 PM every day. Are you sure to auto sync?": "YouTube 同步功能開啟後，系統會在每天早上0點、8點、中午12點、下午2點、晚上6點、9點，自動同步YouTube的資訊與影片，確定要進行同步?",
             "Episode sort by": "劇集排序依照",
-            "YouTube playlist or YouTube channel order": "YouTube 播放清單或頻道順序排列",
-            "YouTube playlist or YouTube channel reverse order": "YouTube 播放清單或頻道反序排列",
             "Add to My App": "上架到App",
             "Invalid URL, please check the URL and try again.": "網址輸入錯誤，請檢查網址後重新輸入。",
             "Input live video URL...": "輸入直播網址...",
