--- a/lang/en.json
+++ b/lang/en.json
@@ -545,8 +545,8 @@
             "Create": "Create",
             "Save": "Save",
             "Episode sort by": "Episode sort by",
-            "YouTube playlist or YouTube channel order": "YouTube playlist or YouTube channel order",
-            "YouTube playlist or YouTube channel reverse order": "YouTube playlist or YouTube channel reverse order",
+            "Playlist or channel order": "Playlist or channel order",
+            "Playlist or channel reverse order": "Playlist or channel reverse order",
             "Add to My App": "Add to My App",
             "You can search the programs which has been added to \"Main Channels\" and \"Program store\" of My App.": "You can search the programs which has been added to \"Main Channels\" and \"Program store\" of My App."
         }
