--- a/lang/zh.json
+++ b/lang/zh.json
@@ -635,7 +635,9 @@
             "Auto sync with video source": "影片自動同步",
             "Program will auto-sync with video source at 0 AM, 8 AM, 12 PM, 2 PM, 6 PM and 9 PM every day. Manually do so by clicking \"Sync\" in program list.": "系統會在每天早上0點、8點、中午12點、下午2點、晚上6點、9點，與影片來源自動進行同步，或可在節目列表點擊「同步」按鈕進行同步。",
             "This program will automatically synchronize videos from video source at 0 AM, 8 AM, 12 PM, 2 PM, 6 PM and 9 PM every day. Are you sure to auto sync?": "影片同步功能開啟後，系統會在每天早上0點、8點、中午12點、下午2點、晚上6點、9點，自動同步影片，確定要進行同步?",
-        	
+        	"Playlist or channel order": "播放清單或頻道順序排列",
+            "Playlist or channel reverse order": "播放清單或頻道反序排列",
+
             "Title": "名稱",
             "Best within 10 characters": "建議10字以內",
             "Program logo": "節目商標",
