--- a/lang/zh.json
+++ b/lang/zh.json
@@ -510,7 +510,7 @@
             "Create a new program": "創建節目",
             "Filtered by:": "分類條件:",
             "All": "全部",
-            "FLIPr programs": "FLIPr節目",
+            "Curated programs": "策展節目",
             "Sync programs": "同步節目",
             "Live programs": "直播節目"
         },
@@ -546,7 +546,7 @@
             "Add online videos into episode and start to <strong>curate your own program.</strong>": "在一集劇集中策展多個單元，開始<strong>策展你的專屬節目</strong>",
             "Sync with <strong>channel or playlist</strong> to get online videos.": "連結<strong>YouTube頻道或播放清單</strong>取得影片。",
             "Sync": "立即同步",
-            "You don't have any FLIPr programs yet.": "你尚無任何FLIPr節目",
+            "You don't have any Curated programs yet.": "你尚無任何策展節目",
             "You don't have any Sync programs yet.": "你尚無任何同步節目",
             "You don't have any live programs yet.": "你尚無任何直播節目",
             "Invalid auto-sync, please sync again and reset in settings.": "自動同步已失效，請再次同步並重新設定。",
