3. Video check button mouse hover 文字改為：Check the video of the episode if it's invalid. 中文翻譯為：檢查劇集內的影片是否已經失效

--- a/lang/en.json
+++ b/lang/en.json
@@ -649,7 +649,7 @@
             "Tell your story by <strong>arranging the video sequence.</strong>": "Tell your story by <strong>arranging the video sequence.</strong>",
             "<strong>Trim the videos and add titles</strong> to make your episodes more intriguing.": "<strong>Trim the videos and add titles</strong> to make your episodes more intriguing.",
             "<strong>Schedule your episodes,</strong> and FLIPr will publish the episodes automatically.": "<strong>Schedule your episodes,</strong> and FLIPr will publish the episodes automatically.",
-            "Video check": "Video check",
+            "Check the video of the episode if it's invalid.": "Check the video of the episode if it's invalid.",
             "No video has problem": "No video has problem",
             "Find ? video has problem.": "Find {0} video has problem.",
             "Find ? videos have problem.": "Find {0} videos have problem."        }
