--- a/lang/zh.json
+++ b/lang/zh.json
@@ -809,7 +809,7 @@
             "Tell your story by <strong>arranging the video sequence.</strong>": "<strong>編排影片播放順序</strong>，說一個獨一無二的故事。",
             "<strong>Trim the videos and add titles</strong> to make your episodes more intriguing.": "<strong>剪輯影片與加入字卡</strong>，讓您的劇集更引人入勝。",
             "<strong>Schedule your episodes,</strong> and FLIPr will publish the episodes automatically.": "<strong>設定劇集自動排程發佈</strong>，讓粉絲定時享受最新劇集。",
-            "Video check": "失效影片檢查",
+            "Check the video of the episode if it's invalid.": "檢查劇集內的影片是否已經失效",
             "No video has problem": "無問題影片",
             "Find ? video has problem.": "找到 {0} 個問題影片",
             "Find ? videos have problem.": "找到 {0} 個問題影片"
