--- a/lang/en.json
+++ b/lang/en.json
@@ -419,7 +419,7 @@
         "channel-list": {
             "Get URL": "Get URL",
             "Brand": "Brand",
-            "URL": "URL",
+            "Share URL": "Share URL",
             "Episodes": "Episodes",
             "Followers": "Followers",
             "Views": "Views",
@@ -642,7 +642,7 @@
             "Delete": "Delete",
             "Get URL": "Get URL",
             "Brand": "Brand",
-            "URL": "URL",
+            "Share URL": "Share URL",
             "Draft": "Draft",
             "Curate new episode to tell a story": "Curate new episode to tell a story",
             "<strong>Curate online videos</strong> into each single episode.": "<strong>Curate online videos</strong> into each single episode.",
