--- a/lang/en.json
+++ b/lang/en.json
@@ -360,6 +360,8 @@
             "Processing...": "Processing..."
         },
         "channel-list": {
+            "UNDER REVIEW": "UNDER REVIEW",
+            "Paid": "Paid",
             "Sorted by": "Sorted by",
             "You will change the order of program list to \"update time\", it will sort by update time of programs automatically so you can't change the order manually except set this BEST programs.": "You will change the order of program list to \"update time\", it will sort by update time of programs automatically so you can't change the order manually except set this BEST programs.",
             "Updated time": "Updated time ",
