--- a/lang/zh.json
+++ b/lang/zh.json
@@ -183,7 +183,7 @@
             "History": "已發送通知"
 
         },
-         "notification": {
+        "notification": {
             "Schedule": "排程通知",
             "History": "已發送",
             "Are you sure you want to delete this notification? All data will be removed permanently.": "所有資料將永久刪除，確定刪除此推撥通知？",
@@ -220,7 +220,7 @@
             "Input notification message...": "輸入通知內容...",
             "Input Curated program or episode URL...": "輸入策展節目或劇集網址..."
         },
-        "schedule-form":{
+        "schedule-form": {
             "Schedule": "發送時間"
         }
     },
@@ -636,14 +636,29 @@
             "Required field": "必填項目"
         },
         "setting-form": {
-        	"Please input YouTube or Vimeo URL.": "請輸入 YouTube 或 Vimeo 連結。",
-        	"URL sample": "範例連結",
+            "Promotion banner": "廣告圖",
+            "Better results with 640 x 360 resolution image": "建議圖片解析度為640x360或以上",
+            "Program price": "節目價格",
+            "Free programe": "免費節目",
+            "Paid programe": "付費節目",
+            "Price": "價格",
+            "Select a price": "選擇一個價格",
+            "Publication name": "發行名稱",
+            "Description": "說明",
+            "Picture for review": "付費商店照片",
+            "If you want to delete the product from App store or Google play please contact with us before a month.": "如果要下架請寄 email 跟我們連絡",
+            "This banner will be used in some information pages, such as paid program preview page.": "這是 Banner",
+            "Upload a screenshot of the product as it appears on the device. This screenshot is used for Apple’s review only and is not displayed on the App Store.": "這要給 apple / google play 商店用的圖片",
+            "Facebook page": "Facebook 專頁",
+
+            "Please input YouTube or Vimeo URL.": "請輸入 YouTube 或 Vimeo 連結。",
+            "URL sample": "範例連結",
             "Add channel or playlist URL": "輸入頻道或播放清單連結",
             "Playlist or channel reverse order": "播放清單或頻道反序排列",
             "Auto sync with video source": "影片自動同步",
             "Program will auto-sync with video source at 0 AM, 8 AM, 12 PM, 2 PM, 6 PM and 9 PM every day. Manually do so by clicking \"Sync\" in program list.": "系統會在每天早上0點、8點、中午12點、下午2點、晚上6點、9點，與影片來源自動進行同步，或可在節目列表點擊「同步」按鈕進行同步。",
             "This program will automatically synchronize videos from video source at 0 AM, 8 AM, 12 PM, 2 PM, 6 PM and 9 PM every day. Are you sure to auto sync?": "影片同步功能開啟後，系統會在每天早上0點、8點、中午12點、下午2點、晚上6點、9點，自動同步影片，確定要進行同步?",
-        	"Playlist or channel order": "播放清單或頻道順序排列",
+            "Playlist or channel order": "播放清單或頻道順序排列",
             "Playlist or channel reverse order": "播放清單或頻道反序排列",
 
             "Title": "名稱",
