--- a/lang/zh.json
+++ b/lang/zh.json
@@ -532,8 +532,9 @@
             "Publish": "上架",
             "Unpublish": "未上架",
             "UNDER REVIEW": "審核中",
-            "Sync programe": "同步節目",
-            "Live programe": "直播節目",
+            "Curated program": "策展節目",
+            "Sync program": "同步節目",
+            "Live program": "直播節目",
             "Get URL": "網址",
             "Brand": "品牌",
             "Share URL": "分享連結",
@@ -558,8 +559,6 @@
             "You don't have any Sync programs yet.": "你尚無任何同步節目",
             "You don't have any live programs yet.": "你尚無任何直播節目",
             "Invalid auto-sync, please sync again and reset in settings.": "自動同步已失效，請再次同步並重新設定。",
-            "Sync program": "同步節目",
-            "Live program": "直播節目",
             "Sort by order": "依順序排列",
             "Sort by reverse order": "依反序排列",
             "In my app": "已上架"
@@ -640,8 +639,8 @@
             "Promotion banner": "宣傳封面",
             "Better results with 640 x 360 resolution image": "建議圖片解析度為 640 x 360",
             "Program price": "節目價格",
-            "Free programe": "免付費節目",
-            "Paid programe": "付費節目",
+            "Free program": "免付費節目",
+            "Paid program": "付費節目",
             "Price": "定價",
             "Select a price": "選擇定價",
             "Publication name": "產品名稱",
