11. Program settings 英文字 Add to My App 改成 Publish to app

--- a/lang/zh.json
+++ b/lang/zh.json
@@ -701,7 +701,7 @@
             "Save": "儲存",
             "Add live video URL": "輸入直播網址",
             "Episode sort by": "劇集排序依照",
-            "Add to My App": "上架到App",
+            "Publish to App": "上架到App",
             "Invalid URL, please check the URL and try again.": "網址輸入錯誤，請檢查網址後重新輸入。",
             "Input live video URL...": "輸入直播網址...",
             "You can search the programs which has been added to \"Main Channels\" and \"Program store\" of My App.": "上架到App的節目，將能在「App管理」的「主頻道」與「類別」中被找到。"
