Program Price欄位下方應顯示"separate with commas"而非"Program Price"

--- a/lang/zh.json
+++ b/lang/zh.json
@@ -639,6 +639,7 @@
             "Promotion banner": "宣傳封面",
             "Better results with 640 x 360 resolution image": "建議圖片解析度為 640 x 360",
             "Program price": "節目價格",
+            "Please input more information for the program.": "請輸入更多節目資訊",
             "Free program": "免付費節目",
             "Paid program": "付費節目",
             "Price": "定價",
