--- a/lang/zh.json
+++ b/lang/zh.json
@@ -650,7 +650,7 @@
             "If you want to delete the product from App store or Google play please contact with us before a month.": "請於一個月前來信提出要將付費節目從 App store 或 Google play 的下架通知！",
             "This banner will be used in some information pages, such as paid program preview page.": "此圖將會用於部分內容介紹頁，例如付費節目的預覽頁面。",
             "Upload a screenshot of the product as it appears on the device. This screenshot is used for Apple’s review only and is not displayed on the App Store.": "該產品截圖只用於 Apple 的審核，不會出現在App Store。",
-            "Facebook page": "Facebook粉絲團",
+            "Web site": "節目網站",
             "Please upload a screenshot which is at least 640 x 920 pixels and at least 72 dpi.": "請上傳解析度至少 640×920 的產品截圖",
             "You can‘t change “program price” after click “Yes”. Are you sure you want to save?": "點擊「是」後，將無法再次修改節目定價。您確定要儲存？",
             "The subscribers and paid users can‘t watch the program after you change to unpublished. Are you sure to change to unpublish?": "將節目下架，將導致訂閱用戶與付費用戶無法觀看此節目。您確定要將該節目下架？",
